--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 2
           ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Set up Maven & JDK17
@@ -48,42 +48,54 @@ jobs:
             -Dsonar.host.url=${{ env.SONAR_URL }}
 
       - name: Install CLI tools
-        run: sudo apt-get update && sudo apt-get install -y jq gh
+        run: sudo apt-get update && sudo apt-get install -y jq gh curl
 
-      - name: Get PR changed files
+      - name: Get PR changed files (using Git diff)
         id: files
-        env:
-          GH_TOKEN: ${{ github.token }}
         run: |
-          gh pr diff --name-only > changed.txt
+          git fetch origin ${{ github.event.pull_request.base.ref }}
+          git diff --name-only origin/${{ github.event.pull_request.base.ref }}...HEAD > changed.txt
           jq -R -s -c 'split("\n")[:-1]' changed.txt > changed.json
           echo "list=$(cat changed.json)" >> $GITHUB_OUTPUT
+          cat changed.json
 
-      - name: Fetch Sonar issues + code snippets
+      - name: Fetch Sonar issues + focused code snippets
         id: sonar-issues
         run: |
           curl -s -G "${{ env.SONAR_URL }}/api/issues/search" \
             --data-urlencode "componentKeys=${{ env.PROJECT_KEY }}" \
             --data-urlencode "pullRequest=${{ github.event.pull_request.number }}" \
-            -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" > all-issues.json
+            -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" \
+            > all-issues.json
 
           jq -c '.issues[]' all-issues.json > issue-lines.txt || echo '[]' > issue-lines.txt
           echo '[' > issues.json
           first=true
 
           while IFS= read -r issue; do
-            comp=$(jq -r '.component' <<<"$issue" | cut -d: -f2-)
-            ln=$(jq -r '.line // 1' <<<"$issue")
+            file=$(jq -r '.component' <<< "$issue" | cut -d: -f2-)
+            ln=$(jq -r '.line // 1' <<< "$issue")
 
-            # Fetch raw file content
-            raw=$(curl -s -G "${{ env.SONAR_URL }}/api/sources/raw" \
-              --data-urlencode "key=${{ env.PROJECT_KEY }}:$comp" \
-              -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}")
+            snippet=$(git diff -U5 origin/${{ github.event.pull_request.base.ref }}...HEAD -- "$file" \
+              | awk -v L="$ln" '
+                  /^@@/ {
+                    split($0,h," "); start=h[2]; gsub(/[-+]/,"",start);
+                    split(start,s,","); hunkStart=s[1];
+                    next
+                  }
+                  /^\+/ {
+                    lineNum = hunkStart + FNR - 1;
+                    if (lineNum == L) {
+                      for (i = -5; i <= 5; i++) {
+                        cmd = "sed -n \"" L+i "p\" \"" file "\""
+                        cmd | getline line; print line
+                      }
+                      exit
+                    }
+                  }
+                ' || echo "/* no diff snippet */")
 
-            # Extract only 10–11 lines around the issue
-            start=$((ln > 5 ? ln - 5 : 1))
-            end=$((ln + 5))
-            snippet=$(echo "$raw" | sed -n "${start},${end}p" \
+            snippet=$(printf '%s\n' "$snippet" \
               | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
 
             entry=$(jq -n \
@@ -92,8 +104,7 @@ jobs:
               '($issue|fromjson) + { snippet: $snippet }')
 
             if [ "$first" = true ]; then
-              first=false
-              echo "$entry" >> issues.json
+              first=false; echo "$entry" >> issues.json
             else
               echo ",$entry" >> issues.json
             fi
@@ -101,40 +112,79 @@ jobs:
 
           echo ']' >> issues.json
 
-
       - name: Send issues to Technical Debt Analyzer
         id: flowise-analysis
         env:
           FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
         run: |
-          ISSUES_JSON=$(jq -c . issues.json)
+          ISSUES_JSON=$(cat issues.json)
+          CHANGED_FILES=$(cat changed.json)
+
+          echo "======= DEBUG: ISSUES JSON ======="
+          echo "$ISSUES_JSON" | jq .
+
+          echo "======= DEBUG: CHANGED FILES ======="
+          echo "$CHANGED_FILES" | jq .
+
+          SONAR_ISSUE_SUMMARY=$(jq -r '
+            .[] |
+            "### Rule: \(.rule)\n" +
+            "* Severity: \(.severity)\n" +
+            "* Location: \(.component):\(.line)\n" +
+            "* Message: \(.message)\n" +
+            "* Snippet:\n```\n\(.snippet)\n```"
+          ' issues.json | sed ':a;N;$!ba;s/\n/\\n/g')
+
+          QUESTION_TEXT="You're analyzing SonarCloud issues from Pull Request #${{ github.event.pull_request.number }} in the '${{ github.repository }}' repository (owner: '${{ github.repository_owner }}'), targeting the '${{ github.event.pull_request.head.ref }}' branch. If there are duplicate issues, analyze them only once.\\n\\n## Sonar Issues\\n$SONAR_ISSUE_SUMMARY"
 
           PAYLOAD=$(jq -cn \
             --arg pr "${{ github.event.pull_request.number }}" \
             --arg proj "${{ env.PROJECT_KEY }}" \
-            --arg question "Analyze the following SonarCloud issues from PR #${{ github.event.pull_request.number }} If there are duplicates, then analyze it only one time. Make sure to refer to the real code and show where it went wrong." \
+            --arg question "$QUESTION_TEXT" \
             --argjson issues "$ISSUES_JSON" \
+            --argjson changedFiles "$CHANGED_FILES" \
             '{
               question: $question,
               overrideConfig: {
                 projectKey: $proj,
-                prNumber: $pr
+                prNumber: $pr,
+                changedFiles: $changedFiles
               },
               issues: $issues
             }')
 
-          RESPONSE=$(curl -s -X POST \
-            -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d "$PAYLOAD" \
-            https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6)
+          echo "======= DEBUG: FINAL PAYLOAD ======="
+          echo "$PAYLOAD" | jq .
 
-          echo "$RESPONSE" > flowise_output.json
+          ATTEMPTS=0
+          MAX_ATTEMPTS=5
+          SUCCESS=false
 
-          DELIM=$(openssl rand -hex 8)
-          echo "analysis<<$DELIM" >> "$GITHUB_OUTPUT"
-          echo "$RESPONSE" >> "$GITHUB_OUTPUT"
-          echo "$DELIM" >> "$GITHUB_OUTPUT"
+          while [ $ATTEMPTS -lt $MAX_ATTEMPTS ]; do
+            echo "Attempt $((ATTEMPTS+1)) of $MAX_ATTEMPTS..."
+            RESPONSE=$(curl -s -X POST \
+              -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN" \
+              -H "Content-Type: application/json" \
+              -d "$PAYLOAD" \
+              https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6)
+
+            echo "$RESPONSE" > flowise_output.json
+
+            if echo "$RESPONSE" | jq -e '.statusCode == 500 and (.message | contains("Agent node"))' > /dev/null; then
+              echo "Transient Flowise error detected, retrying in 10s..."
+              sleep 10
+              ATTEMPTS=$((ATTEMPTS+1))
+            else
+              echo "Flowise responded successfully or with non-retryable error."
+              SUCCESS=true
+              break
+            fi
+          done
+
+          if [ "$SUCCESS" = false ]; then
+            echo "Flowise request failed after $MAX_ATTEMPTS attempts."
+            exit 1
+          fi
 
       - name: Comment on PR
         uses: actions/github-script@v6
@@ -144,33 +194,12 @@ jobs:
           script: |
             const fs = require('fs');
             const path = 'flowise_output.json';
-
-            if (!fs.existsSync(path)) {
-              core.warning('Flowise output file not found.');
-              return;
-            }
-
-            const raw = fs.readFileSync(path, 'utf8').trim();
-            if (!raw || raw[0] !== '{') {
-              core.warning('Flowise did not return valid JSON. Skipping comment.');
-              return;
-            }
-
-            let parsed;
-            try {
-              parsed = JSON.parse(raw);
-            } catch (e) {
-              core.warning(`JSON parse error: ${e.message}`);
-              return;
-            }
-
-            const body = parsed.text || 'Flowise returned:\n```json\n' +
-                          JSON.stringify(parsed, null, 2) + '\n```';
-
+            if (!fs.existsSync(path)) return core.warning('No output');
+            const parsed = JSON.parse(fs.readFileSync(path, 'utf8'));
+            const body = parsed.text || `Flowise returned:\n\`\`\`json\n${JSON.stringify(parsed,null,2)}\n\`\`\``;
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
               body
             });
-
