--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,9 +63,11 @@ jobs:
       - name: Fetch Sonar issues + code snippets
         id: sonar-issues
         run: |
+          # Fetch only OPEN issues from SonarCloud for the PR
           curl -s -G "${{ env.SONAR_URL }}/api/issues/search" \
             --data-urlencode "componentKeys=${{ env.PROJECT_KEY }}" \
             --data-urlencode "pullRequest=${{ github.event.pull_request.number }}" \
+            --data-urlencode "statuses=OPEN" \
             -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" > all-issues.json
 
           jq -c '.issues[]' all-issues.json > issue-lines.txt || echo '[]' > issue-lines.txt
@@ -84,6 +86,18 @@ jobs:
             start=$((ln - 2 < 1 ? 1 : ln - 2))
             end=$((ln + 2))
             snippet=$(sed -n "${start},${end}p" "$comp" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+            text=$(sed -n "${ln}p" "$comp" | sed 's/"/\\"/g')
+
+            if [[ -z "$text" ]] || ! grep -q "$text" <<< "$snippet"; then
+              echo "Line $ln no longer contains the offending code. Skipping..."
+              continue
+            fi
+
+            # Optional: skip license block code
+            if grep -q "Licensed to the Apache Software Foundation" <<< "$snippet"; then
+              echo "Snippet is part of ASF license header. Skipping..."
+              continue
+            fi
 
             entry=$(jq -n \
               --arg issue "$issue" \
@@ -99,6 +113,7 @@ jobs:
           done < issue-lines.txt
 
           echo ']' >> issues.json
+
 
       - name: Send issues to Technical Debt Analyzer
         id: flowise-analysis
