--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,11 +63,9 @@ jobs:
       - name: Fetch Sonar issues + code snippets
         id: sonar-issues
         run: |
-          # Fetch only OPEN issues from SonarCloud for the PR
           curl -s -G "${{ env.SONAR_URL }}/api/issues/search" \
             --data-urlencode "componentKeys=${{ env.PROJECT_KEY }}" \
             --data-urlencode "pullRequest=${{ github.event.pull_request.number }}" \
-            --data-urlencode "statuses=OPEN" \
             -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" > all-issues.json
 
           jq -c '.issues[]' all-issues.json > issue-lines.txt || echo '[]' > issue-lines.txt
@@ -77,33 +75,23 @@ jobs:
           while IFS= read -r issue; do
             comp=$(jq -r '.component' <<<"$issue" | cut -d: -f2-)
             ln=$(jq -r '.line // 1' <<<"$issue")
+            status=$(jq -r '.status' <<<"$issue")
+
+            if [[ "$status" != "OPEN" ]]; then
+              continue
+            fi
 
             if [ ! -f "$comp" ]; then
-              echo "File $comp not found, skipping..."
               continue
             fi
 
             start=$((ln - 2 < 1 ? 1 : ln - 2))
             end=$((ln + 2))
             snippet=$(sed -n "${start},${end}p" "$comp" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
-            text=$(sed -n "${ln}p" "$comp")
-            echo "Checking line $ln in $comp: $text"
 
-            if [[ -z "$text" ]]; then
-              echo "Line $ln is empty. Skipping..."
-              continue
-            fi
+            text=$(sed -n "${ln}p" "$comp" | sed 's/"/\\"/g')
 
-            # Looser check: require that issue line is within file bounds
-            total_lines=$(wc -l < "$comp")
-            if (( ln > total_lines )); then
-              echo "Line $ln out of bounds for file $comp. Skipping..."
-              continue
-            fi
-
-            # Optional: skip license block code
-            if grep -q "Licensed to the Apache Software Foundation" <<< "$snippet"; then
-              echo "Snippet is part of ASF license header. Skipping..."
+            if [[ -z "$text" ]] || ! grep -q "$text" <<< "$snippet"; then
               continue
             fi
 
@@ -122,9 +110,19 @@ jobs:
 
           echo ']' >> issues.json
 
+          HAS_ISSUES=$(jq 'length > 0' issues.json)
+          echo "has_issues=$HAS_ISSUES" >> $GITHUB_OUTPUT
+
+      - name: Write skip message if clean
+        id: skip-check
+        if: steps.sonar-issues.outputs.has_issues != 'true'
+        run: |
+          echo "🎉 Great job! No potential technical debts were found in the new code introduced by this pull request. Keep up the clean coding!" > skip_flowise.txt
+          echo "No issues found. Skipping Flowise agent."
 
       - name: Send issues to Technical Debt Analyzer
         id: flowise-analysis
+        if: steps.sonar-issues.outputs.has_issues == 'true'
         env:
           FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
         run: |
@@ -136,12 +134,6 @@ jobs:
 
           echo "======= DEBUG: CHANGED FILES ======="
           echo "$CHANGED_FILES" | jq .
-
-          if [[ "$ISSUES_JSON" == "[]" ]]; then
-            echo "🎉 Great job! No potential technical debts were found in the new code introduced by this pull request. Keep up the clean coding!" > skip_flowise.txt
-            echo "No issues found. Skipping Flowise agent."
-            exit 0
-          fi
 
           SONAR_ISSUE_SUMMARY=$(jq -r '
             .[] |
@@ -202,7 +194,6 @@ jobs:
             echo "Flowise request failed after $MAX_ATTEMPTS attempts."
             exit 1
           fi
-
 
       - name: Comment on PR
         uses: actions/github-script@v6
