--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,10 +78,12 @@ jobs:
             status=$(jq -r '.status' <<<"$issue")
 
             if [[ "$status" != "OPEN" ]]; then
+              echo "Skipping closed issue in $comp line $ln"
               continue
             fi
 
             if [ ! -f "$comp" ]; then
+              echo "File $comp not found, skipping..."
               continue
             fi
 
@@ -92,6 +94,7 @@ jobs:
             text=$(sed -n "${ln}p" "$comp" | sed 's/"/\\"/g')
 
             if [[ -z "$text" ]] || ! grep -q "$text" <<< "$snippet"; then
+              echo "Line $ln no longer contains the offending code. Skipping..."
               continue
             fi
 
@@ -110,19 +113,8 @@ jobs:
 
           echo ']' >> issues.json
 
-          HAS_ISSUES=$(jq 'length > 0' issues.json)
-          echo "has_issues=$HAS_ISSUES" >> $GITHUB_OUTPUT
-
-      - name: Write skip message if clean
-        id: skip-check
-        if: steps.sonar-issues.outputs.has_issues != 'true'
-        run: |
-          echo "🎉 Great job! No potential technical debts were found in the new code introduced by this pull request. Keep up the clean coding!" > skip_flowise.txt
-          echo "No issues found. Skipping Flowise agent."
-
       - name: Send issues to Technical Debt Analyzer
         id: flowise-analysis
-        if: steps.sonar-issues.outputs.has_issues == 'true'
         env:
           FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
         run: |
@@ -134,6 +126,11 @@ jobs:
 
           echo "======= DEBUG: CHANGED FILES ======="
           echo "$CHANGED_FILES" | jq .
+
+          if [[ "$ISSUES_JSON" == "[]" ]]; then
+            echo '{"text": "✅ No potential Technical Debt was detected in the current PR."}' > flowise_output.json
+            exit 0
+          fi
 
           SONAR_ISSUE_SUMMARY=$(jq -r '
             .[] |
@@ -197,37 +194,34 @@ jobs:
 
       - name: Comment on PR
         uses: actions/github-script@v6
+        if: success()
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const path = 'flowise_output.json';
-            const skipPath = 'skip_flowise.txt';
 
-            let body;
-
-            if (fs.existsSync(skipPath)) {
-              const message = fs.readFileSync(skipPath, 'utf8').trim();
-              body = message || 'No potential technical debts were found.';
-            } else if (fs.existsSync(path)) {
-              const raw = fs.readFileSync(path, 'utf8').trim();
-              if (!raw || raw[0] !== '{') {
-                core.warning('Flowise did not return valid JSON. Skipping comment.');
-                return;
-              }
-
-              try {
-                const parsed = JSON.parse(raw);
-                body = parsed.text || 'Flowise returned:\n```json\n' +
-                        JSON.stringify(parsed, null, 2) + '\n```';
-              } catch (e) {
-                core.warning(`JSON parse error: ${e.message}`);
-                return;
-              }
-            } else {
-              core.warning('No output from Flowise or fallback message.');
+            if (!fs.existsSync(path)) {
+              core.warning('Flowise output file not found.');
               return;
             }
+
+            const raw = fs.readFileSync(path, 'utf8').trim();
+            if (!raw || raw[0] !== '{') {
+              core.warning('Flowise did not return valid JSON. Skipping comment.');
+              return;
+            }
+
+            let parsed;
+            try {
+              parsed = JSON.parse(raw);
+            } catch (e) {
+              core.warning(`JSON parse error: ${e.message}`);
+              return;
+            }
+
+            const body = parsed.text || 'Flowise returned:\n```json\n' +
+                          JSON.stringify(parsed, null, 2) + '\n```';
 
             await github.rest.issues.createComment({
               owner: context.repo.owner,
