--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,28 +74,13 @@ jobs:
 
           while IFS= read -r issue; do
             comp=$(jq -r '.component' <<<"$issue" | cut -d: -f2-)
-            ln=$(jq -r '.line // 1' <<<"$issue")
-            status=$(jq -r '.status' <<<"$issue")
+            ln=$(jq -r '.textRange.startLine // 1' <<<"$issue")
 
-            if [[ "$status" != "OPEN" ]]; then
-              echo "Skipping closed issue in $comp line $ln"
-              continue
-            fi
-
-            if [ ! -f "$comp" ]; then
-              echo "File $comp not found, skipping..."
-              continue
-            fi
-
-            start=$((ln - 2 < 1 ? 1 : ln - 2))
-            end=$((ln + 2))
-            snippet=$(sed -n "${start},${end}p" "$comp" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
-
-            text=$(sed -n "${ln}p" "$comp" | sed 's/"/\\"/g')
-
-            if [[ -z "$text" ]] || ! grep -q "$text" <<< "$snippet"; then
-              echo "Line $ln no longer contains the offending code. Skipping..."
-              continue
+            snippet="N/A"
+            if [ -f "$comp" ]; then
+              start=$((ln - 2 < 1 ? 1 : ln - 2))
+              end=$((ln + 2))
+              snippet=$(sed -n "${start},${end}p" "$comp" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
             fi
 
             entry=$(jq -n \
@@ -112,6 +97,10 @@ jobs:
           done < issue-lines.txt
 
           echo ']' >> issues.json
+
+          HAS_ISSUES=$(jq 'length > 0' issues.json)
+          echo "has_issues=$HAS_ISSUES" >> $GITHUB_OUTPUT
+
 
       - name: Send issues to Technical Debt Analyzer
         id: flowise-analysis
